--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,20 @@
 #bonkStatus {
-  font-family: Courier New, serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: black;
+    color: white;
+  }
+
+  a {
+    color: cornflowerblue;
+  }
+}
+
+#bonkStatus {
   text-align: center;
 }
 
